--- a/countdown.html
+++ b/countdown.html
@@ -9,6 +9,7 @@
     <title>Compte à rebours</title>
   </head>
   <body>
+    <h1 id="info"></h1>
     <input type="date" id="date" />
     <button class="btns" id="btn" onclick="yo()">Start</button>
     <button class="btns" id="btn2" onclick="stop()">Stop</button>
